--- a/projects/hello_world/package.json
+++ b/projects/hello_world/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "hello.js",
   "scripts": {
-    "start": "node hello.js",
+    "start": "npx nodemon hello.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,5 +11,8 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
