--- a/projects/hello_world/package.json
+++ b/projects/hello_world/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
     "pug": "^3.0.3"
   },
   "devDependencies": {
